@@ -78,27 +78,35 @@ test ciphers-1.3 {Tls::ciphers for ssl3} {openssl} {
     # different set of defines than the default.
     # Change the constraint setting above.
     set result [join [lsort -dict [eval tls::ciphers ssl3]] \n ]
-} [join [lsort -dict {EDH-RSA-DES-CBC3-SHA
-EDH-DSS-DES-CBC3-SHA
+} [join [lsort -dict {
+AES128-SHA
+AES256-SHA
+DES-CBC-SHA
 DES-CBC3-SHA
+DHE-DSS-AES128-SHA
+DHE-DSS-AES256-SHA
 DHE-DSS-RC4-SHA
-IDEA-CBC-SHA
-RC4-SHA
-RC4-MD5
-EXP1024-DHE-DSS-RC4-SHA
-EXP1024-RC4-SHA
-EXP1024-DHE-DSS-DES-CBC-SHA
+DHE-RSA-AES128-SHA
+DHE-RSA-AES256-SHA
+EDH-DSS-DES-CBC-SHA
+EDH-DSS-DES-CBC3-SHA
+EDH-RSA-DES-CBC-SHA
+EDH-RSA-DES-CBC3-SHA
+EXP-DES-CBC-SHA
+EXP-EDH-DSS-DES-CBC-SHA
+EXP-EDH-RSA-DES-CBC-SHA
+EXP-RC2-CBC-MD5
+EXP-RC4-MD5
 EXP1024-DES-CBC-SHA
+EXP1024-DHE-DSS-DES-CBC-SHA
+EXP1024-DHE-DSS-RC4-SHA
 EXP1024-RC2-CBC-MD5
 EXP1024-RC4-MD5
-EDH-RSA-DES-CBC-SHA
-EDH-DSS-DES-CBC-SHA
-DES-CBC-SHA
-EXP-EDH-RSA-DES-CBC-SHA
-EXP-EDH-DSS-DES-CBC-SHA
-EXP-DES-CBC-SHA
-EXP-RC2-CBC-MD5
-EXP-RC4-MD5}] \n]
+EXP1024-RC4-SHA
+IDEA-CBC-SHA
+RC4-MD5
+RC4-SHA
+}] \n]
 
 # This version of the test is correct for OpenSSL only.
 # An equivalent test for the RSA BSAFE SSL-C is earlier in this file.
@@ -108,27 +116,35 @@ test ciphers-1.4 {Tls::ciphers for tls1} {openssl} {
     # different set of defines than the default.
     # Change the constraint setting in all.tcl
     set result [join [lsort -dict [eval tls::ciphers tls1]] \n ]
-} [join [lsort -dict {EDH-RSA-DES-CBC3-SHA
-EDH-DSS-DES-CBC3-SHA
+} [join [lsort -dict {
+AES128-SHA
+AES256-SHA
+DES-CBC-SHA
 DES-CBC3-SHA
+DHE-DSS-AES128-SHA
+DHE-DSS-AES256-SHA
 DHE-DSS-RC4-SHA
-IDEA-CBC-SHA
-RC4-SHA
-RC4-MD5
-EXP1024-DHE-DSS-RC4-SHA
-EXP1024-RC4-SHA
-EXP1024-DHE-DSS-DES-CBC-SHA
+DHE-RSA-AES128-SHA
+DHE-RSA-AES256-SHA
+EDH-DSS-DES-CBC-SHA
+EDH-DSS-DES-CBC3-SHA
+EDH-RSA-DES-CBC-SHA
+EDH-RSA-DES-CBC3-SHA
+EXP-DES-CBC-SHA
+EXP-EDH-DSS-DES-CBC-SHA
+EXP-EDH-RSA-DES-CBC-SHA
+EXP-RC2-CBC-MD5
+EXP-RC4-MD5
 EXP1024-DES-CBC-SHA
+EXP1024-DHE-DSS-DES-CBC-SHA
+EXP1024-DHE-DSS-RC4-SHA
 EXP1024-RC2-CBC-MD5
 EXP1024-RC4-MD5
-EDH-RSA-DES-CBC-SHA
-EDH-DSS-DES-CBC-SHA
-DES-CBC-SHA
-EXP-EDH-RSA-DES-CBC-SHA
-EXP-EDH-DSS-DES-CBC-SHA
-EXP-DES-CBC-SHA
-EXP-RC2-CBC-MD5
-EXP-RC4-MD5}] \n]
+EXP1024-RC4-SHA
+IDEA-CBC-SHA
+RC4-MD5
+RC4-SHA
+}] \n]
 
 
 
